--- a/index.html
+++ b/index.html
@@ -434,11 +434,11 @@
                     <p class="mb-1">Vero justo sed sed vero clita amet. Et justo vero sea diam elitr amet ipsum eos
                         ipsum clita duo sed. Sed vero sea diam erat vero elitr sit clita.</p>
                 </div>
-                <div class="row g-4">
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
+                <div class="row g-4 justify-content-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-stretch wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden w-100">
                             <div class="text-center p-4">
-                                <img class="img-fluid rounded-circle mb-4" src="img/team-1.jpg" alt="">
+                                <img class="img-fluid rounded-circle mb-4" src="img/team-1.jpg" alt="" style="width: 150px; height: 150px; object-fit: cover;">
                                 <h5 class="fw-bold mb-1">Full Name</h5>
                                 <small>Designation</small>
                             </div>
@@ -449,10 +449,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-stretch wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden w-100">
                             <div class="text-center p-4">
-                                <img class="img-fluid rounded-circle mb-4" src="img/team-2.jpg" alt="">
+                                <img class="img-fluid rounded-circle mb-4" src="img/team-2.jpg" alt="" style="width: 150px; height: 150px; object-fit: cover;">
                                 <h5 class="fw-bold mb-1">Full Name</h5>
                                 <small>Designation</small>
                             </div>
@@ -463,10 +463,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-stretch wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden w-100">
                             <div class="text-center p-4">
-                                <img class="img-fluid rounded-circle mb-4" src="img/team-3.jpg" alt="">
+                                <img class="img-fluid rounded-circle mb-4" src="img/team-3.jpg" alt="" style="width: 150px; height: 150px; object-fit: cover;">
                                 <h5 class="fw-bold mb-1">Full Name</h5>
                                 <small>Designation</small>
                             </div>
@@ -477,10 +477,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
-                        <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-stretch wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden w-100">
                             <div class="text-center p-4">
-                                <img class="img-fluid rounded-circle mb-4" src="img/team-4.jpg" alt="">
+                                <img class="img-fluid rounded-circle mb-4" src="img/team-4.jpg" alt="" style="width: 150px; height: 150px; object-fit: cover;">
                                 <h5 class="fw-bold mb-1">Full Name</h5>
                                 <small>Designation</small>
                             </div>
@@ -491,10 +491,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
-                        <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-stretch wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden w-100">
                             <div class="text-center p-4">
-                                <img class="img-fluid rounded-circle mb-4" src="img/team-4.jpg" alt="">
+                                <img class="img-fluid rounded-circle mb-4" src="img/team-4.jpg" alt="" style="width: 150px; height: 150px; object-fit: cover;">
                                 <h5 class="fw-bold mb-1">Full Name</h5>
                                 <small>Designation</small>
                             </div>
