--- a/testimonial.html
+++ b/testimonial.html
@@ -125,79 +125,67 @@
                 <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
                     data-wow-delay="0.1s" style="max-width: 600px;">
                     <h1 class="mb-3">What Say Our Clients!!!</h1>
-                    <p class="mb-1">Vero justo sed sed vero clita amet. Et justo vero sea diam elitr amet ipsum eos
-                        ipsum clita duo sed. Sed vero sea diam erat vero elitr sit clita.</p>
+                    <p class="mb-1">At Sabay HOST, we are more than just Cambodia’s leading cloud computing and web hosting provider—we are a trusted partner in your digital journey.</p>
                 </div>
+        <!-- Testimonial Start -->
+        <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="container px-lg-5">
                 <div class="owl-carousel testimonial-carousel">
-                    <div
-                        class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4">
-                        <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle"
-                            style="width: 45px; height: 45px; margin-top: -3px;">
+                    <div class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4">
+                        <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle" style="width: 45px; height: 45px; margin-top: -3px;">
                             <i class="fa fa-quote-left text-white"></i>
                         </div>
-                        <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod
-                            eos labore diam</p>
+                        <p class="mt-3">"Sabay Host is a game-changer. Their attention to detail and problem-solving mindset exceeded our expectations."</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg"
-                                style="width: 50px; height: 50px;">
+                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h6 class="fw-bold mb-1">Client Name</h6>
-                                <small>Profession</small>
+                                <h6 class="fw-bold mb-1">Kol Thida</h6>
+                                <small>Business Man</small>
                             </div>
                         </div>
                     </div>
-                    <div
-                        class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4">
-                        <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle"
-                            style="width: 45px; height: 45px; margin-top: -3px;">
+                    <div class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4">
+                        <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle" style="width: 45px; height: 45px; margin-top: -3px;">
                             <i class="fa fa-quote-left text-white"></i>
                         </div>
-                        <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod
-                            eos labore diam</p>
+                        <p class="mt-3">"Sabay Host consistently delivered high-quality results ahead of schedule. A reliable and talented professional."</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-2.jpg"
-                                style="width: 50px; height: 50px;">
+                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-2.jpg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h6 class="fw-bold mb-1">Client Name</h6>
-                                <small>Profession</small>
+                                <h6 class="fw-bold mb-1">Run Rotha</h6>
+                                <small>Web Developer</small>
                             </div>
                         </div>
                     </div>
-                    <div
-                        class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4">
-                        <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle"
-                            style="width: 45px; height: 45px; margin-top: -3px;">
+                    <div class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4">
+                        <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle" style="width: 45px; height: 45px; margin-top: -3px;">
                             <i class="fa fa-quote-left text-white"></i>
                         </div>
-                        <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod
-                            eos labore diam</p>
+                        <p class="mt-3">"They’re not just technically skilled — they bring creative ideas to every project."</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-3.jpg"
-                                style="width: 50px; height: 50px;">
+                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-3.jpg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h6 class="fw-bold mb-1">Client Name</h6>
-                                <small>Profession</small>
+                                <h6 class="fw-bold mb-1">Heng Visal</h6>
+                                <small>Digital Marketing</small>
                             </div>
                         </div>
                     </div>
-                    <div
-                        class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 mt-4">
-                        <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle"
-                            style="width: 45px; height: 45px; margin-top: -3px;">
+                    <div class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 mt-4">
+                        <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle" style="width: 45px; height: 45px; margin-top: -3px;">
                             <i class="fa fa-quote-left text-white"></i>
                         </div>
-                        <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod
-                            eos labore diam</p>
+                        <p class="mt-3">"Initiative and ability to learn quickly. They adapted seamlessly to our fast-paced environment."</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-4.jpg"
-                                style="width: 50px; height: 50px;">
+                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-4.jpg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h6 class="fw-bold mb-1">Client Name</h6>
+                                <h6 class="fw-bold mb-1">Alice Ammonda</h6>
                                 <small>Profession</small>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
             </div>
         </div>
         <!-- Testimonial End -->
