change hosting to hostingShare

--- a/privacy.html
+++ b/privacy.html
@@ -56,8 +56,8 @@
                     data-bs-target="#navbarCollapse" b-rswtbb66nh=""><span class="fa fa-bars"
                         b-rswtbb66nh=""></span></button>
                 <div class="collapse navbar-collapse" id="navbarCollapse" b-rswtbb66nh=""><!--!-->
-                    <div class="navbar-nav ms-auto py-0" b-rswtbb66nh=""><a href=""
-                            class="nav-item nav-link active" b-rswtbb66nh="">Home</a>
+                    <div class="navbar-nav ms-auto py-0" b-rswtbb66nh=""><a href="" class="nav-item nav-link active"
+                            b-rswtbb66nh="">Home</a>
                         <a href="/about" class="nav-item nav-link" b-rswtbb66nh="">About</a>
                         <a href="/hosting/Shared" class="nav-item nav-link" b-rswtbb66nh="">Shared</a>
                         <a href="/hosting/VPS" class="nav-item nav-link" b-rswtbb66nh="">Cloud VPS</a>
@@ -588,10 +588,10 @@
                             <div class="col-md-6">
                                 <h5 class="fw-bold text-white mb-4">Our Services</h5>
                                 <a class="btn btn-link" href="https://domain.gov.kh/">Domain Register</a>
-                                <a class="btn btn-link" href="./hosting.html">Shared Hosting</a>
-                                <a class="btn btn-link" href="./hosting.html">VPS Hosting</a>
-                                <a class="btn btn-link" href="./hosting.html">Dedicated Hosting</a>
-                                <a class="btn btn-link" href="./hosting.html">Reseller Hosting</a>
+                                <a class="btn btn-link" href="./hostingShare.html">Shared Hosting</a>
+                                <a class="btn btn-link" href="./hostingShare.html">VPS Hosting</a>
+                                <a class="btn btn-link" href="./hostingShare.html">Dedicated Hosting</a>
+                                <a class="btn btn-link" href="./hostingShare.html">Reseller Hosting</a>
                             </div>
                         </div>
                     </div>
