--- a/hostingShare.html
+++ b/hostingShare.html
@@ -74,10 +74,10 @@
                                 <a href="contact.html" class="dropdown-item">Contact</a>
                             </div>
                         </div>
-                        <a href="hosting.html" class="nav-item nav-link active">Shared</a>
-                        <a href="hosting.html" class="nav-item nav-link">Cloud VPS</a>
-                        <a href="hosting.html" class="nav-item nav-link">Cloud VDS</a>
-                        <a href="hosting.html" class="nav-item nav-link">Dedicated Server</a>
+                        <a href="hostingShare.html" class="nav-item nav-link active">Shared</a>
+                        <a href="hostingShare.html" class="nav-item nav-link">Cloud VPS</a>
+                        <a href="hostingShare.html" class="nav-item nav-link">Cloud VDS</a>
+                        <a href="hostingShare.html" class="nav-item nav-link">Dedicated Server</a>
 
                     </div>
                     <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
@@ -280,11 +280,13 @@
                                 <a class="btn btn-primary px-4 py-2" href="./price/priceShare.html">Buy Now</a>
                             </div>
                             <div class="p-4">
-                                <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Disk Space: 75 GB</p>
+                                <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Disk Space:
+                                    75 GB</p>
                                 <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Ram: 4 GB</p>
                                 <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>vCPU: 1 Core
                                 </p>
-                                <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Bandwidth: 10 TB / 1 Gbps</p>
+                                <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Bandwidth: 10
+                                    TB / 1 Gbps</p>
                                 <p class="mb-0"><i class="fa fa-check text-primary me-3"></i>Free SSL Available</p>
                             </div>
                         </div>
@@ -320,10 +322,10 @@
                             <div class="col-md-6">
                                 <h5 class="fw-bold text-white mb-4">Our Services</h5>
                                 <a class="btn btn-link" href="https://domain.gov.kh/">Domain Register</a>
-                                <a class="btn btn-link" href="./hosting.html">Shared Hosting</a>
-                                <a class="btn btn-link" href="./hosting.html">VPS Hosting</a>
-                                <a class="btn btn-link" href="./hosting.html">Dedicated Hosting</a>
-                                <a class="btn btn-link" href="./hosting.html">Reseller Hosting</a>
+                                <a class="btn btn-link" href="./hostingShare.html">Shared Hosting</a>
+                                <a class="btn btn-link" href="./hostingShare.html">VPS Hosting</a>
+                                <a class="btn btn-link" href="./hostingShare.html">Dedicated Hosting</a>
+                                <a class="btn btn-link" href="./hostingShare.html">Reseller Hosting</a>
                             </div>
                         </div>
                     </div>
