--- a/share.html
+++ b/share.html
@@ -58,7 +58,7 @@
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="domain.html" class="nav-item nav-link active">Domain</a>
-                        <a href="hosting.html" class="nav-item nav-link">Hosting</a>
+                        <a href="hostingShare.html" class="nav-item nav-link">Hosting</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
@@ -535,10 +535,10 @@
                             <div class="col-md-6">
                                 <h5 class="fw-bold text-white mb-4">Our Services</h5>
                                 <a class="btn btn-link" href="https://domain.gov.kh/">Domain Register</a>
-                                <a class="btn btn-link" href="./hosting.html">Shared Hosting</a>
-                                <a class="btn btn-link" href="./hosting.html">VPS Hosting</a>
-                                <a class="btn btn-link" href="./hosting.html">Dedicated Hosting</a>
-                                <a class="btn btn-link" href="./hosting.html">Reseller Hosting</a>
+                                <a class="btn btn-link" href="./hostingShare.html">Shared Hosting</a>
+                                <a class="btn btn-link" href="./hostingShare.html">VPS Hosting</a>
+                                <a class="btn btn-link" href="./hostingShare.html">Dedicated Hosting</a>
+                                <a class="btn btn-link" href="./hostingShare.html">Reseller Hosting</a>
                             </div>
                         </div>
                     </div>
