--- a/price/priceShare.html
+++ b/price/priceShare.html
@@ -70,10 +70,10 @@
                                 <a href="contact.html" class="dropdown-item">Contact</a>
                             </div>
                         </div>
-                        <a href="hostingShare.html" class="nav-item nav-link active">Shared</a>
-                        <a href="hostingShare.html" class="nav-item nav-link">Cloud VPS</a>
-                        <a href="hostingShare.html" class="nav-item nav-link">Cloud VDS</a>
-                        <a href="hostingShare.html" class="nav-item nav-link">Dedicated Server</a>
+                        <a href="../hostingShare.html" class="nav-item nav-link active">Shared</a>
+                        <a href="../cloudVPS.html" class="nav-item nav-link">Cloud VPS</a>
+                        <a href="../cloudVDS.html" class="nav-item nav-link">Cloud VDS</a>
+                        <a href="../dedicated.html" class="nav-item nav-link">Dedicated Server</a>
 
                     </div>
                     <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
