--- a/hostingShare.html
+++ b/hostingShare.html
@@ -174,7 +174,7 @@
                                     1.10<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/
                                         Month</small>
                                 </h1>
-                                <a class="btn btn-primary px-4 py-2" href="./price/priceShare.html">Buy Now</a>
+                                <a class="btn btn-primary px-4 py-2" href="./price/priceShareOne.html">Buy Now</a>
                             </div>
                             <div class="p-4">
                                 <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Disk Space: 1
@@ -208,7 +208,7 @@
                                     2.91<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/
                                         Month</small>
                                 </h1>
-                                <a class="btn btn-primary px-4 py-2" href="./price/priceShare.html">Buy Now</a>
+                                <a class="btn btn-primary px-4 py-2" href="./price/priceShareTwo.html">Buy Now</a>
                             </div>
                             <div class="p-4">
                                 <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Disk Space:
@@ -243,7 +243,7 @@
                                     3.99<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/
                                         Month</small>
                                 </h1>
-                                <a class="btn btn-primary px-4 py-2" href="./price/priceShare.html">Buy Now</a>
+                                <a class="btn btn-primary px-4 py-2" href="./price/priceShareOne.html">Buy Now</a>
                             </div>
                             <div class="p-4">
                                 <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Disk Space:
@@ -277,7 +277,7 @@
                                     5.59<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/
                                         Month</small>
                                 </h1>
-                                <a class="btn btn-primary px-4 py-2" href="./price/priceShare.html">Buy Now</a>
+                                <a class="btn btn-primary px-4 py-2" href="./price/priceShareOne.html">Buy Now</a>
                             </div>
                             <div class="p-4">
                                 <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Disk Space:
