--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                             </div>
                         </div>
                         <a href="hostingShare.html" class="nav-item nav-link">Shared</a>
-                        <a href="hostingShare.html" class="nav-item nav-link">Cloud VPS</a>
-                        <a href="hostingShare.html" class="nav-item nav-link">Cloud VDS</a>
-                        <a href="hostingShare.html" class="nav-item nav-link">Dedicated Server</a>
+                        <a href="cloudVPS.html" class="nav-item nav-link">Cloud VPS</a>
+                        <a href="cloudVDS.html" class="nav-item nav-link">Cloud VDS</a>
+                        <a href="dedicated.html" class="nav-item nav-link">Dedicated Server</a>
 
                     </div>
                     <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
