--- a/hostingShare.html
+++ b/hostingShare.html
@@ -75,11 +75,11 @@
                             </div>
                         </div>
                         <a href="hostingShare.html" class="nav-item nav-link active">Shared</a>
-                        <a href="hostingShare.html" class="nav-item nav-link">Cloud VPS</a>
-                        <a href="hostingShare.html" class="nav-item nav-link">Cloud VDS</a>
-                        <a href="hostingShare.html" class="nav-item nav-link">Dedicated Server</a>
-
+                        <a href="cloudVPS.html" class="nav-item nav-link">Cloud VPS</a>
+                        <a href="cloudVDS.html" class="nav-item nav-link">Cloud VDS</a>
+                        <a href="dedicated.html" class="nav-item nav-link">Dedicated Server</a>
                     </div>
+                    
                     <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
                         data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
                     <a href="" class="btn btn-secondary py-2 px-4 ms-3">Register</a>
