--- a/cloudVPS.html
+++ b/cloudVPS.html
@@ -74,12 +74,11 @@
                                 <a href="contact.html" class="dropdown-item">Contact</a>
                             </div>
                         </div>
-                        <a href="hostingShare.html" class="nav-item nav-link active">Shared</a>
-                        <a href="cloudVPS.html" class="nav-item nav-link">Cloud VPS</a>
+                        <a href="hostingShare.html" class="nav-item nav-link ">Shared</a>
+                        <a href="cloudVPS.html" class="nav-item nav-link active">Cloud VPS</a>
                         <a href="cloudVDS.html" class="nav-item nav-link">Cloud VDS</a>
                         <a href="dedicated.html" class="nav-item nav-link">Dedicated Server</a>
                     </div>
-                    
                     <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
                         data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
                     <a href="" class="btn btn-secondary py-2 px-4 ms-3">Register</a>
@@ -115,7 +114,7 @@
                             <nav aria-label="breadcrumb">
                                 <ol
                                     class="breadcrumb justify-content-center justify-content-lg-end animated slideInRight mx-4">
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
+                                    <li class="breadcrumb-item"><a class="text-white" href="./index.html">Home</a></li>
                                     <li class="breadcrumb-item text-white active" aria-current="page">Hosting
                                     </li>
                                 </ol>
@@ -174,7 +173,7 @@
                                     8.41<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/
                                         Month</small>
                                 </h1>
-                                <a class="btn btn-primary px-4 py-2" href="./price/priceShareOne.html">Buy Now</a>
+                                <a class="btn btn-primary px-4 py-2" href="./price/priceVPSOne.html">Buy Now</a>
                             </div>
                             <div class="p-4">
                                 <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Disk Space: 1
@@ -208,7 +207,7 @@
                                     11.59<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/
                                         Month</small>
                                 </h1>
-                                <a class="btn btn-primary px-4 py-2" href="./price/priceShareTwo.html">Buy Now</a>
+                                <a class="btn btn-primary px-4 py-2" href="./price/priceVPSTwo.html">Buy Now</a>
                             </div>
                             <div class="p-4">
                                 <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Disk Space:
@@ -243,7 +242,7 @@
                                     16.69<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/
                                         Month</small>
                                 </h1>
-                                <a class="btn btn-primary px-4 py-2" href="./price/priceShareOne.html">Buy Now</a>
+                                <a class="btn btn-primary px-4 py-2" href="./price/priceVPSThree.html">Buy Now</a>
                             </div>
                             <div class="p-4">
                                 <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Disk Space:
