--- a/dedicated.html
+++ b/dedicated.html
@@ -74,10 +74,10 @@
                                 <a href="contact.html" class="dropdown-item">Contact</a>
                             </div>
                         </div>
-                        <a href="hostingShare.html" class="nav-item nav-link active">Shared</a>
+                        <a href="hostingShare.html" class="nav-item nav-link ">Shared</a>
                         <a href="cloudVPS.html" class="nav-item nav-link">Cloud VPS</a>
                         <a href="cloudVDS.html" class="nav-item nav-link">Cloud VDS</a>
-                        <a href="dedicated.html" class="nav-item nav-link">Dedicated Server</a>
+                        <a href="dedicated.html" class="nav-item nav-link active">Dedicated Server</a>
                     </div>
                     
                     <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
@@ -115,7 +115,7 @@
                             <nav aria-label="breadcrumb">
                                 <ol
                                     class="breadcrumb justify-content-center justify-content-lg-end animated slideInRight mx-4">
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
+                                    <li class="breadcrumb-item"><a class="text-white" href="./index.html">Home</a></li>
                                     <li class="breadcrumb-item text-white active" aria-current="page">Hosting
                                     </li>
                                 </ol>
@@ -171,10 +171,10 @@
                                 </p>
                                 <h1 class="mb-3">
                                     <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>$
-                                    1.10<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/
+                                    180.98<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/
                                         Month</small>
                                 </h1>
-                                <a class="btn btn-primary px-4 py-2" href="./price/priceShareOne.html">Buy Now</a>
+                                <a class="btn btn-primary px-4 py-2" href="./price/pricededicateOne.html">Buy Now</a>
                             </div>
                             <div class="p-4">
                                 <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Disk Space: 1
@@ -205,10 +205,10 @@
                                 </p>
                                 <h1 class="mb-3">
                                     <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>$
-                                    2.91<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/
+                                    230.98<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/
                                         Month</small>
                                 </h1>
-                                <a class="btn btn-primary px-4 py-2" href="./price/priceShareTwo.html">Buy Now</a>
+                                <a class="btn btn-primary px-4 py-2" href="./price/pricedediacteTwo.html">Buy Now</a>
                             </div>
                             <div class="p-4">
                                 <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Disk Space:
@@ -240,10 +240,10 @@
                                 </p>
                                 <h1 class="mb-3">
                                     <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>$
-                                    3.99<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/
+                                    298.98<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/
                                         Month</small>
                                 </h1>
-                                <a class="btn btn-primary px-4 py-2" href="./price/priceShareOne.html">Buy Now</a>
+                                <a class="btn btn-primary px-4 py-2" href="./price/pricedediacteThree.html">Buy Now</a>
                             </div>
                             <div class="p-4">
                                 <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Disk Space:
@@ -252,40 +252,6 @@
                                 <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>vCPU: 1 Core
                                 </p>
                                 <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Bandwidth: 5
-                                    TB / 1 Gbps</p>
-                                <p class="mb-0"><i class="fa fa-check text-primary me-3"></i>Free SSL Available</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Content Price -->
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="position-relative shadow rounded border-top border-5 border-primary">
-                            <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-50 translate-middle bg-primary rounded-circle"
-                                style="width: 45px; height: 45px; margin-top: -3px;">
-                                <i class="fa fa-share-alt text-white"></i>
-                            </div>
-                            <div class="text-center border-bottom p-4 pt-5">
-                                <h4 class="fw-bold">Share Hosting</h4>
-                                <p class="mb-0">"Simple & Affordable Hosting for Beginners"</p>
-                            </div>
-                            <div class="text-center border-bottom p-4">
-                                <p class="text-primary mb-1">
-                                    <span class="text-decoration-line-through">$ 6.50</span><strong> - Save 30%</strong>
-                                </p>
-                                <h1 class="mb-3">
-                                    <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>$
-                                    5.59<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/
-                                        Month</small>
-                                </h1>
-                                <a class="btn btn-primary px-4 py-2" href="./price/priceShareOne.html">Buy Now</a>
-                            </div>
-                            <div class="p-4">
-                                <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Disk Space:
-                                    75 GB</p>
-                                <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Ram: 4 GB</p>
-                                <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>vCPU: 1 Core
-                                </p>
-                                <p class="border-bottom pb-3"><i class="fa fa-check text-primary me-3"></i>Bandwidth: 10
                                     TB / 1 Gbps</p>
                                 <p class="mb-0"><i class="fa fa-check text-primary me-3"></i>Free SSL Available</p>
                             </div>
