--- a/hostingShare.html
+++ b/hostingShare.html
@@ -79,7 +79,7 @@
                         <a href="cloudVDS.html" class="nav-item nav-link">Cloud VDS</a>
                         <a href="dedicated.html" class="nav-item nav-link">Dedicated Server</a>
                     </div>
-                    
+
                     <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
                         data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
                     <a href="" class="btn btn-secondary py-2 px-4 ms-3">Register</a>
@@ -115,7 +115,7 @@
                             <nav aria-label="breadcrumb">
                                 <ol
                                     class="breadcrumb justify-content-center justify-content-lg-end animated slideInRight mx-4">
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
+                                    <li class="breadcrumb-item"><a class="text-white" href="./index.html">Home</a></li>
                                     <li class="breadcrumb-item text-white active" aria-current="page">Hosting
                                     </li>
                                 </ol>
