--- a/price/priceShareThree.html
+++ b/price/priceShareThree.html
@@ -111,7 +111,7 @@
                             <nav aria-label="breadcrumb">
                                 <ol
                                     class="breadcrumb justify-content-center justify-content-lg-end animated slideInRight mx-4">
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
+                                    <li class="breadcrumb-item"><a class="text-white" href="../index.html">Home</a></li>
                                     <li class="breadcrumb-item text-white active" aria-current="page">Hosting</li>
                                     <li class="breadcrumb-item text-white active" aria-current="page">Configure</li>
                                 </ol>
