--- a/price/priceVDSTwo.html
+++ b/price/priceVDSTwo.html
@@ -70,9 +70,9 @@
                                 <a href="contact.html" class="dropdown-item">Contact</a>
                             </div>
                         </div>
-                        <a href="../hostingShare.html" class="nav-item nav-link active">Shared</a>
+                        <a href="../hostingShare.html" class="nav-item nav-link ">Shared</a>
                         <a href="../cloudVPS.html" class="nav-item nav-link">Cloud VPS</a>
-                        <a href="../cloudVDS.html" class="nav-item nav-link">Cloud VDS</a>
+                        <a href="../cloudVDS.html" class="nav-item nav-link active">Cloud VDS</a>
                         <a href="../dedicated.html" class="nav-item nav-link">Dedicated Server</a>
 
                     </div>
@@ -156,7 +156,7 @@
                                     </div>
                                     <div class="col-lg-6">
                                         <p class="fs-5">
-                                            Monthly Base Price <b class="ms-2">$1.10</b>
+                                            Monthly Base Price <b class="ms-2">$78.59</b>
                                             <br>
                                             <span class="no-setup-fee">No Setup Fee</span>
                                         </p>
@@ -681,7 +681,7 @@
 
         <script>
             /* Months Calculation Function */
-            const monthPrice = 1.10;
+            const monthPrice = 78.59;
             let termPrice = 0.00;
             let btnThreeMonths = document.getElementById("three_month");
             let btnSixMonths = document.getElementById("six_month");
