--- a/testimonial.html
+++ b/testimonial.html
@@ -48,28 +48,39 @@
         <!-- Navbar & Hero Start -->
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-                <a href="" class="navbar-brand p-0">
-                    <h1 class="m-0"><i class="fa fa-server me-3"></i>GreenHost</h1>
-                    <!-- <img src="img/logo.png" alt="Logo"> -->
+                <a href="index.html" class="navbar-brand p-0">
+                    <h1 class="m-0">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor"
+                            class="bi bi-rocket-takeoff-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M12.17 9.53c2.307-2.592 3.278-4.684 3.641-6.218.21-.887.214-1.58.16-2.065a3.6 3.6 0 0 0-.108-.563 2 2 0 0 0-.078-.23V.453c-.073-.164-.168-.234-.352-.295a2 2 0 0 0-.16-.045 4 4 0 0 0-.57-.093c-.49-.044-1.19-.03-2.08.188-1.536.374-3.618 1.343-6.161 3.604l-2.4.238h-.006a2.55 2.55 0 0 0-1.524.734L.15 7.17a.512.512 0 0 0 .433.868l1.896-.271c.28-.04.592.013.955.132.232.076.437.16.655.248l.203.083c.196.816.66 1.58 1.275 2.195.613.614 1.376 1.08 2.191 1.277l.082.202c.089.218.173.424.249.657.118.363.172.676.132.956l-.271 1.9a.512.512 0 0 0 .867.433l2.382-2.386c.41-.41.668-.949.732-1.526zm.11-3.699c-.797.8-1.93.961-2.528.362-.598-.6-.436-1.733.361-2.532.798-.799 1.93-.96 2.528-.361s.437 1.732-.36 2.531Z" />
+                            <path
+                                d="M5.205 10.787a7.6 7.6 0 0 0 1.804 1.352c-1.118 1.007-4.929 2.028-5.054 1.903-.126-.127.737-4.189 1.839-5.18.346.69.837 1.35 1.411 1.925" />
+                        </svg>
+                        GreenHost
+                    </h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="domain.html" class="nav-item nav-link">Domain</a>
-                        <a href="hostingShare.html" class="nav-item nav-link">Hosting</a>
+                        <a href="index.html" class="nav-item nav-link ">Home</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu m-0">
-                                <a href="team.html" class="dropdown-item">Our Team</a>
+                                <a href="about.html" class="dropdown-item ">About</a>
+                                <a href="team.html" class="dropdown-item ">Our Team</a>
                                 <a href="testimonial.html" class="dropdown-item active">Testimonial</a>
                                 <a href="comparison.html" class="dropdown-item">Comparison</a>
+                                <a href="contact.html" class="dropdown-item">Contact</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="hostingShare.html" class="nav-item nav-link">Shared</a>
+                        <a href="cloudVPS.html" class="nav-item nav-link">Cloud VPS</a>
+                        <a href="cloudVDS.html" class="nav-item nav-link">Cloud VDS</a>
+                        <a href="dedicated.html" class="nav-item nav-link">Dedicated Server</a>
+
                     </div>
                     <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
                         data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
@@ -77,25 +88,14 @@
                 </div>
             </nav>
 
+            <!-- Hero Section -->
             <div class="container-xxl py-5 bg-primary hero-header mb-5">
                 <div class="container my-5 py-5 px-lg-5">
-                    <div class="row g-5 pt-5">
-                        <div class="col-12 text-center text-lg-start">
-                            <h1 class="display-4 text-white animated slideInLeft">Testimonial</h1>
-                            <nav aria-label="breadcrumb">
-                                <ol
-                                    class="breadcrumb justify-content-center justify-content-lg-start animated slideInLeft">
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                                    <li class="breadcrumb-item text-white active" aria-current="page">Testimonial</li>
-                                </ol>
-                            </nav>
-                        </div>
-                    </div>
+
                 </div>
+
             </div>
         </div>
-        <!-- Navbar & Hero End -->
 
 
         <!-- Full Screen Search Start -->
