--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         <!-- Navbar Short Section -->
         <div class="container-xxl position-relative p-0"><!--!-->
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-                <a href="" class="navbar-brand p-0">
+                <a href="index.html" class="navbar-brand p-0">
                     <h1 class="m-0">
                         <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor"
                             class="bi bi-rocket-takeoff-fill" viewBox="0 0 16 16">
