--- a/price/priceShareFour.html
+++ b/price/priceShareFour.html
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-                <!-- Navbar Short Section -->
+        <!-- Navbar Short Section -->
         <div class="container-xxl position-relative p-0"><!--!-->
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
@@ -78,7 +78,7 @@
                     </div>
                     <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
                         data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
-                    <a href="" class="btn btn-secondary py-2 px-4 ms-3">Register</a>
+                    <a href="../login.html" class="btn btn-secondary py-2 px-4 ms-3">Register</a>
                 </div>
             </nav>
 
@@ -237,8 +237,8 @@
                                         <div class="row">
                                             <div class="col-lg-4 text-start">
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox"
-                                                        id="cambodia_region" value="57.60">
+                                                    <input class="form-check-input" type="checkbox" id="cambodia_region"
+                                                        value="57.60">
                                                     <label class="form-check-label" for="cambodia_region">
                                                         Asia(Cambodia)
                                                     </label>
@@ -255,8 +255,8 @@
                                         <div class="row">
                                             <div class="col-lg-4 text-start">
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox"
-                                                        id="japan_region" value="21.60">
+                                                    <input class="form-check-input" type="checkbox" id="japan_region"
+                                                        value="21.60">
                                                     <label class="form-check-label" for="japan_region">
                                                         Asia(Japan)
                                                     </label>
@@ -273,8 +273,8 @@
                                         <div class="row">
                                             <div class="col-lg-4 text-start">
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox"
-                                                        id="checkIndia" value="17.52">
+                                                    <input class="form-check-input" type="checkbox" id="checkIndia"
+                                                        value="17.52">
                                                     <label class="form-check-label" for="checkIndia">
                                                         Asia(India)
                                                     </label>
@@ -544,7 +544,7 @@
                             <!-- Term length -->
                             <div class="p-2 border-bottom d-flex fw-semi-bold">
                                 <span class="ps-2 w-50 ">Term Length :</span> $<span id="termlength">
-                                     <!-- Months Calculation Function -->
+                                    <!-- Months Calculation Function -->
                                 </span>
                             </div>
 
