--- a/cloudVPS.html
+++ b/cloudVPS.html
@@ -81,7 +81,7 @@
                     </div>
                     <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
                         data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
-                    <a href="" class="btn btn-secondary py-2 px-4 ms-3">Register</a>
+                    <a href="./login.html" class="btn btn-secondary py-2 px-4 ms-3">Register</a>
                 </div>
             </nav>
 
@@ -166,7 +166,8 @@
                             </div>
                             <div class="text-center border-bottom p-4">
                                 <p class="text-primary mb-1">
-                                    <span class="text-decoration-line-through">$ 10.59</span><strong> - Save 30%</strong>
+                                    <span class="text-decoration-line-through">$ 10.59</span><strong> - Save
+                                        30%</strong>
                                 </p>
                                 <h1 class="mb-3">
                                     <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>$
@@ -200,7 +201,8 @@
                             </div>
                             <div class="text-center border-bottom p-4">
                                 <p class="text-primary mb-1">
-                                    <span class="text-decoration-line-through">$ 13.50</span><strong> - Save 30%</strong>
+                                    <span class="text-decoration-line-through">$ 13.50</span><strong> - Save
+                                        30%</strong>
                                 </p>
                                 <h1 class="mb-3">
                                     <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>$
@@ -235,7 +237,8 @@
                             </div>
                             <div class="text-center border-bottom p-4">
                                 <p class="text-primary mb-1">
-                                    <span class="text-decoration-line-through">$ 18.59</span><strong> - Save 30%</strong>
+                                    <span class="text-decoration-line-through">$ 18.59</span><strong> - Save
+                                        30%</strong>
                                 </p>
                                 <h1 class="mb-3">
                                     <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>$
