--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
                     </div>
                     <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
                         data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
-                    <a href="" class="btn btn-secondary py-2 px-4 ms-3">Register</a>
+                    <a href="./login.html" class="btn btn-secondary py-2 px-4 ms-3">Register</a>
                 </div>
             </nav>
 
