--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </div>
                     <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
                         data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
-                    <a href="" class="btn btn-secondary py-2 px-4 ms-3">Register</a>
+                    <a href="./login.html" class="btn btn-secondary py-2 px-4 ms-3">Register</a>
                 </div>
             </nav>
 
@@ -681,8 +681,8 @@
         </div>
         <div id="popup-chat" class="popup-chat">
             <img src="./img/QR.png" width="100%" alt="QR Code">
-                    <br>
-        Our Telegram
+            <br>
+            Our Telegram
         </div>
 
     </div>
